--- a/style.css
+++ b/style.css
@@ -1,66 +1,43 @@
-@mixin btn-border-drawing($color: #ccc, $hover: black, $width: 2px, $vertical: top, $horizontal: left, $duration: 0.25s) {
-  box-shadow: inset 0 0 0 $width $color;
-  color: $color;
-  transition: color $duration $duration/3;
-  position: relative;
-  
-  &::before,
-  &::after {
-    border: 0 solid transparent;
-    box-sizing: border-box;
-    content: '';
-    pointer-events: none;
-    position: absolute;
-    width: 0; height: 0;
-    
-    #{$vertical}: 0; 
-    #{$horizontal}: 0;
+@keyframes bounce
+  20%, 53%, 80%, 0%, 100% {
+      -webkit-animation-timing-function: cubic-bezier(0.215,.61,.355,1);
+      animation-timing-function: cubic-bezier(0.215,.61,.355,1);
+      -webkit-transform: translate3d(0,0,0);
+      transform: translate3d(0,0,0);
+  }
+  40%, 43% {
+      -webkit-animation-timing-function: cubic-bezier(0.755,.050,.855,.060);
+      animation-timing-function: cubic-bezier(0.755,.050,.855,.060);
+      -webkit-transform: translate3d(0,-30px,0);
+      transform: translate3d(0,-30px,0);
+  }
+  70% {
+      -webkit-animation-timing-function: cubic-bezier(0.755,.050,.855,.060);
+      animation-timing-function: cubic-bezier(0.755,.050,.855,.060);
+      -webkit-transform: translate3d(0,-15px,0);
+      transform: translate3d(0,-15px,0);
+  }
+  90% {
+      -webkit-transform: translate3d(0,-4px,0);
+      transform: translate3d(0,-4px,0);
   }
 
-  &::before {
-    $h-side: if($horizontal == 'left', 'right', 'left');
-    
-    border-#{$vertical}-width: $width;
-    border-#{$h-side}-width: $width;
-  }
+.container
+  text-align center
+  padding-top 10%
   
-  &::after {
-    $v-side: if($vertical == 'top', 'bottom', 'top');
-    
-    border-#{$v-side}-width: $width;
-    border-#{$horizontal}-width: $width;
-  }
+.button
+  font-family "Open Sans", sans-serif
+  background-color #B45
+  border none
+  color white
+  padding 10px 40px
+  letter-spacing 2px
+  text-transform uppercase
+  font-size 21px
+  &:hover
+    cursor pointer
   
-  &:hover {
-    color: $hover;
-    
-    &::before,
-    &::after {
-      border-color: $hover;
-      transition: border-color 0s, width $duration, height $duration;
-      width: 100%;
-      height: 100%;
-    }
-    
-    &::before { transition-delay: 0s, 0s, $duration; }
-    
-    &::after { transition-delay: 0s, $duration, 0s; }
-  }
-}
-
-.draw-border {
-  @include btn-border-drawing(#58afd1, #ffe593, 4px, bottom, right);
-}
-
-//=== Button styling, semi-ignore
-.btn {
-  background: none;
-  border: none;
-  cursor: pointer;
-  line-height: 1.5;
-  font: 700 1.2rem 'Roboto Slab', sans-serif;
-  padding: 1em 2em;
-  letter-spacing: 0.05rem;
+.bounce
+  animation bounce 2s infinite
   
-  &:focus { outline: 2px dotted #55d7dc; }
-}
