--- a/scss/theme/_home.scss
+++ b/scss/theme/_home.scss
@@ -100,7 +100,7 @@
 //--------- Start Banner Area -------------//
 
 .banner-area {
-	background:url(../img/banner-bg.jpg) center;
+	background:url(../emuhlybackground.png) center;
 	background-size:cover;
 
 	.primary-btn{
