--- a/css/main.css
+++ b/css/main.css
@@ -2341,7 +2341,7 @@ body.mobile-nav-active #mobile-nav-toggle {
 }
 
 .banner-area {
-  background: url(../emuhlybackground.png) center;
+  background: url(../emuhly.png) center;
   background-size: cover;
 }
 
