--- a/css/main.css
+++ b/css/main.css
@@ -2404,7 +2404,7 @@ body.mobile-nav-active #mobile-nav-toggle {
 
 .header-btn:hover {
   border: 1px solid #fff;
-  background: #77d48f;
+  background: #daedfd;
   color: #000000 !important;
 }
 
