--- a/css/main.css
+++ b/css/main.css
@@ -1988,7 +1988,7 @@ h1, h2, h3, h4, h5, h6 {
   margin: 0;
 }
 
-@media (max-width: 768px) {
+@media (max-width: 400px) { //768
   #header #logo h1 {
     font-size: 28px;
   }
