--- a/css/main.css
+++ b/css/main.css
@@ -1958,7 +1958,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 #header.header-scrolled {
-  background: #eb34b4;
+  background: #daedfd;
   transition: all 0.5s;
 }
 
