--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -774,7 +774,7 @@ section {
 }
 
 .about .video-box {
-  background: url("../img/49999.jpg") center center no-repeat;
+  background: url("../img/copter.jpg") center center no-repeat;
   background-size: contain;
   min-height: 300px;
 }
