--- a/assets/css/tastebite-styles.css
+++ b/assets/css/tastebite-styles.css
@@ -8577,7 +8577,7 @@ a {
 
 /* 2. 2. Tastebite Font Family CSS  */
 body {
-  font-family: "Inter", sans-serif;
+  font-family: "MADEVoyager", sans-serif;
   color: #000;
   background-color: #fff; }
 
