--- a/assets/css/tastebite-styles.css
+++ b/assets/css/tastebite-styles.css
@@ -8585,7 +8585,7 @@ body {
   font-family: "Playfair Display", serif !important; }
 
 .inter-font {
-  font-family: "Inter", sans-serif !important; }
+  font-family: "MADEVoyager", sans-serif !important; }
 
 /* 2. 3. Tastebite Font Weights CSS  */
 h1, .h1, .h1, h2, .h2, .h2, h3, .h3, .h3, h4, .h4, .h4, h5, .h5, .h5, h6, .h6, .h6 {
@@ -9572,7 +9572,7 @@ hr {
 /* 7. Tastebite Category Page CSS */
 .desserts-box sup {
   font-size: 16px;
-  font-family: "Inter", sans-serif;
+  font-family: "MADEVoyager", sans-serif;
   font-weight: normal; }
 .desserts-box p {
   font-size: 16px; }
