--- a/assets/css/tastebite-styles.css
+++ b/assets/css/tastebite-styles.css
@@ -6,6 +6,8 @@
  */
 @import url("https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;500;600;700;800;900&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Inter:wght@100;300;400;500;600;700;800;900&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Raleway&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Oxygen:wght@300&family=Raleway&display=swap');
 :root {
   --bs-blue: #007bff;
   --bs-indigo: #6610f2;
